# shopify-aliexpress-integration

./: Cargo.toml  readme.md
src/: main.rs
src/handlers/: product_handler.rs
