[package]
name = "shopify-aliexpress-integration"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.214"
utoipa = { version = "4.2.0", features = ["axum_extras"]}
utoipa-swagger-ui = {version = "6.0.0", features = ["axum"]}
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
axum = "0.7.7"
utoipa-axum = "0.1.2"
lettre = "0.11.10"
mime = "0.3.17"
bytes = "1.8.0"
serde_bytes = "0.11.15"
